@@ -69,6 +69,7 @@
 - fix compilation of lookup_ldap.c without sasl.
 - fix dumpmaps multi output.
 - try and cleanup after dumpmaps.
+- teach dumpmaps to output maps to files.
 
 25/07/2012 autofs-5.0.7
 =======================
